--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "rgb-ui",
     "slug": "rgb-ui",
+    "owner": "adrian2396",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
