--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "expo": "~45.0.0",
+    "expo-constants": "~13.1.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-web": "0.17.7",
     "react-router-native": "^5.2.1",
-    "expo-constants": "~13.1.1"
+    "sharp-cli": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
